--- a/style.css
+++ b/style.css
@@ -112,3 +112,18 @@ table #onEvent tr, td{
 	width: 160px;
 	background-color: transparent;
 }
+
+div #clickMeButton {
+    height: 60px;
+    width: 100px;
+    border-radius: 5px;
+    background-color: #69D2E7;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: Verdana, Arial, Sans-Serif;
+    opacity: 0.5;
+}
+
+
+
+
